- info: This is an unstable release preparing 1.2.6 - it has incomplete translations too
- fixed: No runtime errors on scanning while still connecting (Bug #1892724)
- fixed: correct inheriting of classes from 'object' (Bug #1892724)
- fixed: you are now told if your config files are broken (at least on the console) (Bug #1781957)
- fixed: commands not ending will now not make blueproximity hang
- added: log file notice on hanging commands
- added: support for multiple config files via *.conf files in ~/.blueproximity
- added: new configurations can be added, deleted, renamed via gui
- added: new locale hu - thanks Kami
- modified: old config file is gone, it should now reside in directory ~/.blueproximity
- modified: much more Doxygen documentation in the source
- modified: proximity command has moved into Proximity class

1.2.4 "keep releasing" - released 2008-02-09
- added: support for russian language - thanks Alexey

1.2.3 "do it the ubuntu way" - released 2008-02-09
- modified: many small thnigs to get upstream compliance to all ubuntu policies
- modified; changed source to support the old and the newer pybluez _bluetooth import variants

1.2.2 "fix it, fix it, fix it" - released 2008-01-31
- fixed: errors during imports can now be translated and don't lead to an error (Bug #1881000)
- fixed: now the "Use selected device" button works again - shame on me... (Bug #1878304)
- added: now we have a (rather uninteresting) man page (Bug #1841869)

1.2.1 "I'll be back" - released 2007-11-22
- fixed: proximity command now only executes if proximity detected and not paused (Bug #1835488)
- added: some tool tips should help the initial user
- added: new channel setting via GUI (Bug #1772585)
- added: scan for usable channels on a device (Bug #1772585)
- added: more error messages if external packages are missing

1.2 "call me HIG" - released 2007-09-11
- fixed: unlock command was always executed at start-up