@@ -15,6 +15,7 @@ Translators:
    en Lars Friedrichs <LarsFriedrichs@gmx.de>
    es César Palma <cesarpalma80@gmail.com>
    fa Ali Sattari <ali.sattari@gmail.com>
+   fr Claude <f5pbl@users.sourceforge.net>
    hu Kami <kamihir@freemail.hu>
    it e633 <e633@users.sourceforge.net>
    Prosper <prosper.nl@gmail.com>
@@ -22,7 +23,6 @@ Translators:
    sv Jan Braunisch <x@r6.se>
    th Maythee Anegboonlap & pFz <null@llun.info>
    former translators
-   fr Claude <f5pbl@users.sourceforge.net>
    sv Alexander Jönsson <tp-sv@listor.tp-sv.se>
    sv Daniel Nylander <dnylander@users.sourceforge.net>
 
